fixed a couple links and added some more styles

--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
     <link rel="stylesheet" href="./css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/style.css">
 
-    <title>Github Finder</title>
+    <title>Git-API-Fetch</title>
   </head>
   <body>
 
     <nav class="navbar navbar-dark bg-primary">
       <div class="container">
         <div class="navbar-header">
-          <p class="navbar-brand">Github Finder</p>
+          <h1 class="navbar-brand">Git-Fetch</h1>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
 
