added a few comments

--- a/index.html
+++ b/index.html
@@ -1,21 +1,20 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
+    <!-- Bootstrap -->
     <link rel="stylesheet" href="./css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/style.css">
 
-    <!--Custom font styles-->
+    <!--Custom font style-->
     <link href="https://fonts.googleapis.com/css2?family=Oleo+Script:wght@700&display=swap" rel="stylesheet">
 
     <title>Github-Fetch</title>
   </head>
   <body>
-    <!--Navbar-->
+    <!--Plain Navbar-->
     <nav class="navbar navbar-dark bg-primary">
       <div class="container">
         <div class="navbar-header">
@@ -29,7 +28,7 @@
       <div class="col-md-5">
           <div class="searchContaineruser">
           <h2>Search Users</h2>
-          <p class="lead">Enter a username to fetch a users profile and repos</p>
+          <p class="lead">Enter a username to fetch a users repositories</p>
           <input type="text" id="searchUser" class="form-control" placeholder="Github Username...">
           </div>
           <br>
